# ampache-mediaserver-interface

./: .gitignore  INSTALL  Makefile.am  README  TODO  configure.ac  meson.build  test.sh
src/: AmpacheAPI.vala  DBItemAdder.vala  Interfaces2.vala  Main.vala  Services2.vala  XMLParsing.vala  sqlite.vala
vapi/: cutils.c  cutils.h  cutils.vapi  gio_ext-2.0.vapi  mediaserver-query-parser.h  mediaserver-query-parser.vapi  query-analyzer.l  query-definitions.h  query-parser.y
